[package]
name = "redphoenixq-shuttle-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
shuttle-serenity = "0.53.0"
shuttle-runtime = "0.53.0"
serenity = { version = "0.12.4", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = "1.26.0"
tracing = "0.1.41"
rand = "0.9.0"
const_format = "0.2.34"
