[package]
name = "redphoenixq-shuttle-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serenity = { version = "0.12.4", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
rand = "0.9.0"
const_format = "0.2.34"
